k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1 # DONT go above 1 without additional configuration
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim # see .yml file
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage # refers to line 16 volumes: name:
              mountPath: /var/lib/postgresql/data # default
              subPath: postgres # means that data inside container is going to be stored inside folder 'postgres'. Specific for postgres.
          env: # SETTING THE CUSTOM PASSWORD FOR THE DATABASE
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: pgpassword
                  key: PGPASSWORD
