k8s/api-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: api
  ports:
    - port: 5000 # om de service te bereiken
      targetPort: 5000 # de port waar de api app draait in de container
